First server release

--- a/resources/templates/authors.twig
+++ b/resources/templates/authors.twig
@@ -7,10 +7,12 @@
         <span class="work">Grafika</span>
         <span class="name">Kasia Pytlik</span>
         <span class="work">Fabuła</span>
-        <span class="name-sub">Rafał Bieniasz</span>
         <span class="name-sub">Tomasz Cembała</span>
         <span class="name-sub">Kamil Maśnica</span>
+        <span class="name-sub">Antoni Szeptycki</span>
+        <span class="name-sub">Rafał Bieniasz</span>
         <span class="name-sub">Szymon Mrowiec</span>
+        <span class="name-sub">Bartek Michalak</span>
         <span class="work">Breadcrumbs</span>
         <p>Wykonano podczas imprezy GameJam 2018 w Zespole Szkół Żeglugi Sródlądowej. Zbieżność imion i nazwisk jest
             przypadkowa.</p>
