--- a/resources/templates/card.twig
+++ b/resources/templates/card.twig
@@ -2,7 +2,7 @@
 <div class="gui-container">
     {% include "common/logobox.twig" %}
     <section class="gui-box card">
-        <h2>Karta nr {{cardDetails.cardID}}</h2>
+        {#<h2>Karta nr {{cardDetails.cardID}}</h2>#}
         <article class="text">{{cardDetails.content}}</article>
     </section>
     <div class="gui-box-less">
