--- a/resources/templates/login-choose.twig
+++ b/resources/templates/login-choose.twig
@@ -1,6 +1,6 @@
 {% include "common/header.twig" %}
-
 <div class="gui-container">
+    {% include "common/logobox.twig" %}
     <div class="gui-box">
         <span class="description-smaller">Aby kontynuować, wybierz jedno z poniższych:</span>
         <div class="login-choose">
