--- a/resources/templates/login.twig
+++ b/resources/templates/login.twig
@@ -1,6 +1,6 @@
 {% include "common/header.twig" %}
-
 <div class="gui-container">
+    {% include "common/logobox.twig" %}
     <div class="gui-box">
         <h2>Logowanie</h2>
         <form class="form" method="post" action="/login">
